@@ -3,10 +3,8 @@
 . /etc/profile
 oe_setup_addon service.headphones
 
-if [ -z "$hp_nice" ]; then
-  hp_nice="0"
-fi
-
+PYTHONUSERBASE="$ADDON_DIR" \
 nice -n "$hp_nice" \
-python $ADDON_DIR/headphones/Headphones.py \
-       --datadir="$ADDON_HOME"
+python "$ADDON_DIR/headphones/Headphones.py" \
+       --datadir="$ADDON_HOME" \
+       --port "$hp_port"
